// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUGeneral /> should render with issues 1`] = `
<div>
  <OTUIssues
    isolates={
      Array [
        Object {
          "id": "baz",
        },
      ]
    }
    issues={
      Object {
        "empty_isolate": Array [
          "456def",
        ],
        "empty_otu": false,
        "empty_sequence": false,
        "isolate_inconsistency": false,
      }
    }
  />
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      <tr>
        <th
          className="col-xs-4"
        >
          Name
        </th>
        <td
          className="col-xs-8"
        >
          Foo Bar
        </td>
      </tr>
      <tr>
        <th>
          Abbreviation
        </th>
        <td>
          FB
        </td>
      </tr>
      <tr>
        <th>
          Version
        </th>
        <td>
          3
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;

exports[`<OTUGeneral /> should render without issues 1`] = `
<div>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      <tr>
        <th
          className="col-xs-4"
        >
          Name
        </th>
        <td
          className="col-xs-8"
        >
          Foo Bar
        </td>
      </tr>
      <tr>
        <th>
          Abbreviation
        </th>
        <td>
          FB
        </td>
      </tr>
      <tr>
        <th>
          Version
        </th>
        <td>
          3
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;
